# v2ray-singbox

./: .dockerignore  Cargo.toml  Dockerfile  README.md  ShellCrash.cfg  ShellCrash_Restore_Guide.md  docker-compose.yml  others.json  sub.txt  template.yaml  template_online.yaml
.github/workflows/: docker-publish.yml
src/: main.rs
