[package]
name = "v2ray-singbox"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "http2"] }
base64 = "0.22"
url = "2.5"
urlencoding = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.12.3"
json5 = "1.3.1"
